- Added "empty message" option to cart module (#2197)
- Added indexing of products for the Contao search module (#2105)
- Added automatic currency conversion routines (including Hooks for data providers)
- Added new hook generateFilters (#2146)
- Added new hook saveCollection
- Added inserttag to retrieve data of the current product or a certain product id (#2047)
- Improved: loading products is now centralized in IsotopeFrontend static functions
- Improved: "Loading product data" is now in the language file (#2215)
- Improved: Removed size and added maxlength attribute to quantity input fields (#2118)
- Improved: updated currency list according to ISO 4217 (#2082)
- Improved: the reader page id is now set in the site structure but you can still overwrite it per module (#2105)
- Improved: the rounding increment can now also be applied for tax classes (#2505)
- Improved: the rounding increment is now applied on the grand total too (#2341)
- Improved: Make Company Details accessible in Invoice Template (#2239)
- Improved: Add uniqid to order mail wildcards (#2531)
- Improved: disable checkout navigation on payment and processing steps (#2529)
- Improved: start and stop date are now fixed fields, available on all product types
- Improved: Can now cut & paste multiple products between groups (#2229)
- Improved: Provide insert tags on order confirmation page (#2260)
- Improved: Simplified order insert tags code
- Improved: Addresses can now optionally be labelled by the customer (#2051 and #2052)
- Improved: The isotope folder now gets generated on-the-fly (#2044)
- Improved: SKU must now be unique
- Fixed radio button events in Internet Explorer (Ticket #484)
- Fixed products DCA not loaded in rare cases
- Fixed: hide customer definied fields in product edit mode
- Fixed low price calculation for advanced prices
- Fixed sorting by module configuration (#2037)
- Fixed backend category sorting, updated DC_TablePageId driver (#2101)