@@ -401,6 +401,7 @@ CREATE TABLE `tl_iso_shipping_modules` (
   `tax_class` int(10) unsigned NOT NULL default '0',
   `countries` blob NULL,
   `subdivisions` longblob NULL,
+  `postalCodes` text NULL,
   `minimum_total` decimal(12,2) NOT NULL default '0.00',
   `maximum_total` decimal(12,2) NOT NULL default '0.00',
   `product_types` blob NULL,
@@ -564,7 +565,7 @@ CREATE TABLE `tl_iso_tax_rate` (
   `label` varchar(255) NOT NULL default '',
   `country` varchar(2) NOT NULL default '',
   `subdivision` varchar(10) NOT NULL default '',
-  `postal` varchar(255) NOT NULL default '',
+  `postalCodes` text NULL,
   `config` int(10) unsigned NOT NULL default '0',
   `rate` varchar(255) NOT NULL default '',
   `address` blob NULL,
