@@ -36,7 +36,7 @@ $GLOBALS['TL_LANG']['tl_iso_tax_rate']['label']			= array('Tax Rate Label','This
 $GLOBALS['TL_LANG']['tl_iso_tax_rate']['address']		= array('Address to Use for Calculation', 'Select which address this rate should use to apply its calculation.');
 $GLOBALS['TL_LANG']['tl_iso_tax_rate']['country']		= array('Country', 'Select a country this tax class applies to.');
 $GLOBALS['TL_LANG']['tl_iso_tax_rate']['subdivision']	= array('State/Region', 'Select a state or region this tax class applies to.');
-$GLOBALS['TL_LANG']['tl_iso_tax_rate']['postal']		= array('Postal Code Range', 'Specify a postal code range this tax class applies to. (Ex: 10000 - 20000)');
+$GLOBALS['TL_LANG']['tl_iso_tax_rate']['postalCodes']	= array('Postal codes', 'Limit the tax rate to postal codes. You can enter a comma separated list and ranges (e.g. 1234,1235,1236-1239,1100-1200).');
 $GLOBALS['TL_LANG']['tl_iso_tax_rate']['amount']		= array('Subtotal Amount Restriction', 'Optional: Restrict this tax rate to specific subtotal amount (such as for a luxury tax.)');
 $GLOBALS['TL_LANG']['tl_iso_tax_rate']['rate']			= array('Tax Rate', 'A rate in percent this tax is set at.');
 $GLOBALS['TL_LANG']['tl_iso_tax_rate']['config'] 		= array('Store configuration', 'Select the store configuration that the tax rate applies to.');
