@@ -25,6 +25,7 @@ Version 1.3.rc1 (2011-??-??)
 - Added new hook generateFilters (#2146)
 - Added new hook saveCollection
 - Added inserttag to retrieve data of the current product or a certain product id (#2047)
+- Added support for postal code ranges in flat shipping module
 - Improved: loading products is now centralized in IsotopeFrontend static functions
 - Improved: "Loading product data" is now in the language file (#2215)
 - Improved: Removed size and added maxlength attribute to quantity input fields (#2118)
@@ -42,6 +43,7 @@ Version 1.3.rc1 (2011-??-??)
 - Improved: Addresses can now optionally be labelled by the customer (#2051 and #2052)
 - Improved: The isotope folder now gets generated on-the-fly (#2044)
 - Improved: SKU must now be unique
+- Imporved: Tax rates now have more flexible postal code settings
 - Fixed radio button events in Internet Explorer (Ticket #484)
 - Fixed products DCA not loaded in rare cases
 - Fixed: hide customer definied fields in product edit mode
